fix: fix the color picker can't colse on click twice and add z-index for the notification (#619)
* fix(select): fix the bug about clicking the select component

fix the bug about clicking the select component

fix #496

* docs: fix some bug in the docs of upload and infiniteScroll

fix some bug in the docs of upload and infiniteScroll

* docs: change the options api to composition api in the avatar docs

change the options api to composition api in the avatar docs

re #540

* Update avatar.md

* Revert update avatar.md

* fix(color-picker): fix the color picker can't colse on click twice

fix the color picker can't colse on click twice

fix #602

* fix(notification): fix notification does not have hight z-index

fix notification does not have hight z-index

fix #602

--- a/packages/theme-chalk/src/notification.scss
+++ b/packages/theme-chalk/src/notification.scss
@@ -13,7 +13,7 @@
   box-shadow: $--notification-shadow;
   transition: opacity .3s, transform .3s, left .3s, right .3s, top 0.4s, bottom .3s;
   overflow: hidden;
-
+  z-index: 9999;
   &.right {
     right: 16px;
   }
